Movie ticket system/force-app/main/default/objects/Payment__c/fields/Amount_To_be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_To_be_Paid__c</fullName>
    <formula>Ticket__r.Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount To be Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>