Movie ticket system/force-app/main/default/objects/Payment__c/fields/Pending_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amount__c</fullName>
    <formula>Amount_To_be_Paid__c - Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>