Movie ticket system/force-app/main/default/objects/Payment__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <label>Ticket</label>
    <referenceTo>Ticket_Booking__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>